--- a/config.yml
+++ b/config.yml
@@ -39,3 +39,14 @@ jobs:
           name: Run tests
           # This assumes pytest is installed via the install-package step above
           command: pytest
+          
+          ...
+- name: "NGINX test result"
+  debug: 
+    msg: "NGINX found"
+  when: "'nginx' in ansible_facts.packages"
+
+- name: "NGINX test result"
+  debug: 
+    msg: "NGINX NOT found"
+  when: "'nginx' not in ansible_facts.packages"
